# hpcalgo

./: LICENSE  README.md
hip/: CMakeLists.txt  hipalgo.cpp  hipalgo.hpp  hipbench-saxpy.cpp  hipbench-scan.cpp  hiptest.cpp
sycl/: CMakeLists.txt  syclalgo.cpp  syclalgo.hpp  syclbench-saxpy.cpp  syclbench-scan.cpp  sycltest.cpp
